# elasticsearch-cpp

./: .gitignore  CMakeLists.txt  README.md  elkClient-config.cmake
cmake/: FindElkClient.cmake  dependencies.cmake  install.cmake  version.h.in
dependencies/: CMakeLists.txt
dependencies/include/: catch2.hpp  magic_enum.hpp
include/: CMakeLists.txt
include/common/: keys.h  model.h
include/elasticsearch/actions/: cluster_details.h  index.h
include/elasticsearch/models/: cluster_details.h  create_index_body.h  index_types.h  version.h
include/elk/common/: authentication.h  error_handler.h  exceptions.h  keys.h  model.h  utility.h
include/elk/elasticsearch/: elasticsearch_client.h
include/elk/elasticsearch/actions/: cluster_details.h  index.h
include/elk/elasticsearch/models/: cluster_details.h  create_index_body.h  index_types.h  version.h
include/elk/elasticsearch/models/index/: bulk_insert_action.h  bulk_insert_body.h  bulk_insert_data.h  index_actions.h  index_mapping_properties.h  index_mappings.h  property_value.h
include/elk/kibana/: kibana_client.h
include/elk/kibana/actions/: saved_object.h
include/elk/kibana/models/: create_saved_object_body.h  create_saved_object_response.h  saved_object_attributes.h  saved_object_type.h
include/kibana/models/: create_saved_object_body.h  create_saved_object_response.h
src/: CMakeLists.txt  elk_client_pch.h
src/common/: CMakeLists.txt  authentication.cpp  error_handler.cpp  exceptions.cpp  model.cpp  utility.cpp
src/elasticsearch/: CMakeLists.txt  elasticsearch_client.cpp
src/elasticsearch/actions/: cluster_details.cpp  index.cpp
src/elasticsearch/models/: cluster_details.cpp  create_index_body.cpp  version.cpp
src/elasticsearch/models/index/: bulk_insert_action.cpp  bulk_insert_body.cpp  index_mapping_properties.cpp  index_mappings.cpp  index_mappings.h  property_value.cpp  property_value.h
src/elk-client/: CMakeLists.txt
src/elk-client/common/: CMakeLists.txt  authentication.cpp  error_handler.cpp  model.cpp  model.h
src/elk-client/elasticsearch/: CMakeLists.txt  elasticsearch_client.cpp  elasticsearch_client.h
src/elk-client/elasticsearch/actions/: cluster_details.cpp  index.cpp  index.h
src/elk-client/elasticsearch/models/: cluster_details.cpp  cluster_details.h  create_index_body.cpp  create_index_body.h  index_types.h  version.cpp
src/elk-client/elasticsearch/models/index/: index_mapping_properties.cpp  index_mappings.cpp  index_mappings.h  property_value.cpp  property_value.h
src/elk-client/kibana/: CMakeLists.txt  kibana_client.cpp  kibana_client.h
src/elk-client/kibana/actions/: saved_object.cpp  saved_object.h
src/elk-client/kibana/models/: create_saved_object_body.cpp  create_saved_object_body.h  create_saved_object_response.cpp  create_saved_object_response.h  saved_object_attributes.cpp  saved_object_attributes.h
src/kibana/: CMakeLists.txt  kibana_client.cpp
src/kibana/actions/: saved_object.cpp
src/kibana/models/: create_saved_object_body.cpp  create_saved_object_response.cpp  saved_object_attributes.cpp
src/test/: CMakeLists.txt  elk_int_test.cpp
test/: CMakeLists.txt  elk_int_test.cpp  elk_int_test_pch.h  kibana_dashboard_data.h
